# packc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: Application.hpp  FileManager.hpp  ProjectBuilder.hpp  ProjectCreator.hpp  ProjectGenerator.hpp  cfgpath.h
src/: Application.cpp  FileManager.cpp  ProjectBuilder.cpp  ProjectCreator.cpp  ProjectGenerator.cpp  main.cpp
templates/: cmake.tempp  header.tempp  main.tempp  source.tempp
